--- a/pid/validation/eid/SConstruct
+++ b/pid/validation/eid/SConstruct
@@ -1,13 +1,14 @@
 import os, glob
 
 env = Environment(ENV = {'PATH':os.environ['PATH']}, h22libs=os.environ['h22libs'])
-
 env.ParseConfig("root-config --glibs --cflags")
-env.Append(CCFLAGS = ['-g', '-std=c++11'])
-env.Append(CPPPATH = ['$h22libs/include/'], LIBPATH = ['$h22libs/lib/'],LIBS = ['h22'])
-env.Append(CPPPATH = ['$ROOTSYS/include/'], LIBPATH = ['$ROOTSYS/lib/'],LIBS = ['TreePlayer','TMVA','Minuit','XMLIO','MLP'])
+env.Append(CCFLAGS = ['-g','-std=c++11'])
+env.Append(CPPPATH = ['$h22libs/include/analysis/', '$h22libs/include/database/', '$h22libs/include/io/',
+		       '$h22libs/include/histogram/', '$h22libs/include/nathan/', 
+		       '$h22libs/include/tools/', '$h22libs/include/config/', '$h22libs/momCorr/'])
+env.Append(LIBPATH = ['$h22libs/lib/'],LIBS = ['h22'])
 
 sources = glob.glob('*.cxx')
 
-for prog in sources:
-    env.Program(prog)
+for target in sources:
+    env.Program(target)
