--- a/projects/inclusive_xs/SConstruct
+++ b/projects/inclusive_xs/SConstruct
@@ -1,18 +1,18 @@
 import os, glob
 
-exeEnv = Environment(ENV = {'PATH':os.environ['PATH']}, h22libs=os.environ['h22libs'])
-exeEnv.ParseConfig("root-config --glibs --cflags")
-exeEnv.Append(CFLAGS = ['-g'])
-exeEnv.Append(CPPPATH = ['$h22libs/include/'], LIBPATH = ['$h22libs/lib/'],LIBS = ['h22','FortranModel','CppModel','SimplePlot'])
-#exeEnv.Append(LIBPATH = ['/apps/gcc/4.8.2/lib64/'],LIBS = ['quadmath','gfortran'])
-exeEnv.Append(LIBPATH = ['/apps/gcc/5.2.0/install/lib64/'],LIBS = ['quadmath','gfortran'])
-exeEnv.Append(CPPPATH = ['$ROOTSYS/include/'], LIBPATH = ['$ROOTSYS/lib/'],LIBS = ['TreePlayer','TMVA','Minuit','XMLIO','MLP'])
-#exeEnv.Append(CPPPATH = ['$h22libs/include/'], LIBPATH = ['$h22libs/lib/'],LIBS = ['FortranModel'])
-#exeEnv.Append(CPPPATH = ['$h22libs/include/'], LIBPATH = ['$h22libs/lib/'],LIBS = ['CppModel'])
+env = Environment(ENV = {'PATH':os.environ['PATH']}, 
+    h22libs=os.environ['h22libs'], 
+    MODELLIB=os.environ['MODELLIB'])
+
+env.ParseConfig("root-config --glibs --cflags")
+env.Append(CCFLAGS = ['-g','-std=c++11'])
+env.Append(CPPPATH = ['$h22libs/include/analysis/', '$h22libs/include/database/', '$h22libs/include/io/',
+		       '$h22libs/include/histogram/', '$h22libs/include/nathan/', 
+		       '$h22libs/include/tools/', '$h22libs/include/config/', '$h22libs/momCorr/',
+		       '$MODELLIB/include/'])
+env.Append(LIBPATH = ['$h22libs/lib/','$MODELLIB/lib/'], LIBS = ['h22','CppModel','FortranModel'])
 
 sources = glob.glob('src/*.cxx')
 
 for target in sources:
-    exeEnv.Program(target)
-
-#exeEnv.Program('src/fillHistograms.cxx')
+    env.Program(target)
