--- a/pid/validation/hid/SConstruct
+++ b/pid/validation/hid/SConstruct
@@ -1,13 +1,16 @@
 import os, glob
 
-exeEnv = Environment(ENV = {'PATH':os.environ['PATH']}, h22libs=os.environ['h22libs'])
-exeEnv.ParseConfig("root-config --glibs --cflags")
-exeEnv.Append(CCFLAGS = ['-g'])
-exeEnv.Append(CPPPATH = ['$h22libs/include/'], LIBPATH = ['$h22libs/lib/'],LIBS = ['h22'])
-exeEnv.Append(LIBPATH = ['$ROOTSYS/lib/'],LIBS = ['TreePlayer'])
+env = Environment(ENV = {'PATH':os.environ['PATH']}, h22libs=os.environ['h22libs'])
+env.ParseConfig("root-config --glibs --cflags")
+env.Append(CCFLAGS = ['-g','-std=c++11'])
+env.Append(CPPPATH = ['$h22libs/include/analysis/', '$h22libs/include/database/', '$h22libs/include/io/',
+		       '$h22libs/include/histogram/', '$h22libs/include/nathan/', 
+		       '$h22libs/include/tools/', '$h22libs/include/config/', '$h22libs/momCorr/'])
+
+env.Append(LIBPATH = ['$h22libs/lib/'],LIBS = ['h22'])
+env.Append(LIBPATH = ['$ROOTSYS/lib/'], LIBS=['Tree', 'tbb', 'Imt'])
 
 sources = glob.glob('*.cxx')
 
 for target in sources:
-    exeEnv.Program(target)
-
+    env.Program(target)
